Added links for our new generated files to the nav bar.
Editing sortByMajor

deleted $scope.message

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -14,6 +14,8 @@
         <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
             <a ng-href="{{item.link}}">{{item.title}}</a>
             <a ng-href="{{item.linkForFindStudentByNames}}">{{item.FindStudentByNames}}</a>
+            <a ng-href="{{item.linkForSortByMajor}}">{{item.SortByMajor}}</a>
+            <a ng-href="{{item.linkForDOB}}">{{item.FindDOB}}</a>
 
         </li>
         <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
