Figured out problem with double ng-repeat Created a few more tables Added ability to search Took out extra code from pages Split functions and HTML code among 3 separate pages Added new links to navBar Renamed navBar links so they no longer match file and folder names but now make more sense to the user

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -15,6 +15,7 @@
             <a ng-href="{{item.link}}">{{item.title}}</a>
             <a ng-href="{{item.linkForFindStudentByNames}}">{{item.FindStudentByNames}}</a>
             <a ng-href="{{item.linkForDOB}}">{{item.FindDOB}}</a>
+            <a ng-href="{{item.linkForspecificStudentInfo}}">{{item.DetailedInfo}}</a>
 
         </li>
         <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
